<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="103dp"
        android:layout_height="37dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:gravity="center"
        android:text="@string/return_mana"
        android:textColor="#08670B"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReturn"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="103dp"
        android:layout_height="37dp"
        android:gravity="center"
        android:text="@string/borrow_mana"
        android:textColor="#08670B"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.289"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBorrow"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="103dp"
        android:layout_height="37dp"
        android:gravity="center"
        android:text="@string/book_mana"
        android:textColor="#08670B"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/btnBook" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="103dp"
        android:layout_height="37dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:gravity="center"
        android:text="@string/account_mana"
        android:textColor="#08670B"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnBorrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAccount" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="104dp"
        android:layout_height="111dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/sachtra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toEndOf="@+id/btnBorrow"
        app:layout_constraintTop_toBottomOf="@+id/btnBook"
        app:layout_constraintVertical_bias="0.039"
        android:onClick="goReturn"/>

    <Button
        android:id="@+id/btnAccount"
        android:layout_width="104dp"
        android:layout_height="111dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/account"
        android:onClick="goAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/btnBook"
        android:layout_width="104dp"
        android:layout_height="111dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/sach"
        android:onClick="goBook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toEndOf="@+id/btnAccount"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/btnBorrow"
        android:layout_width="104dp"
        android:layout_height="111dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/sachmuon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="goBorrow"
        app:layout_constraintTop_toBottomOf="@+id/btnAccount"
        app:layout_constraintVertical_bias="0.039" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="265dp"
        android:layout_height="151dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/manager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>